--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,11 +1,12 @@
 [supervisord]
 nodaemon=true
 user=root
-logfile=/var/log/supervisor/supervisord.log
+logfile=/dev/stdout
+logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 
 [program:php-fpm]
-command=php-fpm8.2 -F
+command=php-fpm82 -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
